@@ -1,19 +1,19 @@
 Feature: Book search
-In order to find books I might buy
-As a potential customer
-I want to search for books by different criterias
+  In order to find books I might buy
+  As a potential customer
+  I want to search for books by different criterias
   
   Background:
     Given the following books
-        |Author     		|Title         										 |Year   |Publisher			|
-        |Martin Fowler		|Patterns of Enterprise Application Architecture     |2002   |Addison Wesley	|
-        |Eric Evans			|Domain Driven Design 				    			 |2003   |Addison Wesley	|
-        |Gerard Meszaros	|xUnit Test Patterns                                 |2007   |Addison Wesley	|
+      | Author          | Title                                           | Year | Publisher      |
+      | Martin Fowler   | Patterns of Enterprise Application Architecture | 2002 | Addison Wesley |
+      | Eric Evans      | Domain Driven Design                            | 2003 | Addison Wesley |
+      | Gerard Meszaros | xUnit Test Patterns                             | 2007 | Addison Wesley |
   
   Scenario: Search for title
     When I search for title 'Patterns'
     Then the result list should contain 2 books
-	
+  
   Scenario: Search for author
     When I search for author 'Fowler'
     Then the result list should contain 1 book
