@@ -1,7 +1,7 @@
 Feature: Checkout cart
-In order to buy books
-As a customer
-I want to checkout my cart and commit the order.
+  In order to buy books
+  As a customer
+  I want to checkout my cart and commit the order.
   
   Scenario: Committing a simple order
     Given my shopping cart contains 1 book with price 11.5
