@@ -3,7 +3,7 @@
   <dependencies>
     <dependency org="cuke4duke" name="cuke4duke" rev="0.2.3"/>
     <dependency org="org.jruby" name="jruby-complete" rev="1.4.0" transitive="false"/>
-    <dependency org="org.picocontainer" name="picocontainer" rev="2.8.3"/>
-    <dependency org="junit" name="junit" rev="4.7"/>
+    <dependency org="org.picocontainer" name="picocontainer" rev="2.10.2"/>
+    <dependency org="junit" name="junit" rev="4.8.1"/>
   </dependencies>
 </ivy-module>
